--- a/styles/style.css
+++ b/styles/style.css
@@ -5,32 +5,24 @@ body {
   margin: 0;
 }
 
-#background{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 50%;
-  background-color: #1c5380;
-}
-
-.page {
-  margin: 0 auto;
+.background{
+  height: 100vh;
+  background: rgb(28,83,128);
+  background: linear-gradient(180deg, rgba(28,83,128,0.7619047619047619) 0%, rgba(28,83,128,1) 45%, rgba(255,255,255,1) 45%);
 }
 
 /* BLOCK */
 
 .general-block{
   display:flex;
-  justify-content: center;
-  margin: 10% 10% 2% 10%;
+  padding: 100px 200px;
 }
+
 
 .right-block{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 30%;
   margin-left: 50px;
 }
 
@@ -74,4 +66,3 @@ nav ul {
   width: 700px;
   color: #06365f;
 }
-
