--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,71 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+#blue-top {
+  z-index: -1;
+  position: absolute;
+  background-image: linear-gradient(#1c5380, #06365f);
+  height: 300px;
+  width: 100vw;
+}
+
+.smartphones {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 20vh;
+}
+
+.logo-and-home{
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+}
+
+.log-in-btn{
+  border-color: #1c5380;
+  background: linear-gradient(#81b2dc,#306ea0);
+  box-shadow: inset 0px 1px 0px 0px #06365f;
+  padding-top: 6px;
+  padding-left: 3rem;
+  padding-right: 1rem;
+  padding-bottom: 5px;
+  color: #ffffff;
+  text-shadow: 0px 1px 0px rgb(22, 6, 92);
+  font-size: 1rem;
+  text-align: center;
+  text-decoration: none;
+}
+.white-box{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+h1{
+  font-size: 4vh;
+  font-weight: bold;
+  color: #06365f;
+}
+
+/*
+Se eu colocar o seletor 'a' abaixo
+o texto fica em colunas e funciona o text-decoration none
+*/
+.footer{
+  display: flex;
+  justify-content: space-around;
+  align-content: space-around;
+  align-items: center;
+  color: #1c5380;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 1rem;
+  margin-left: 25%;
+  margin-right: 25%;
 }
