--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,102 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.background{
+  height: 50vh;
+ background-image: linear-gradient(to top, #06365f,  #1c5380); 
+ background-repeat: no-repeat;
+}
+
+.god-section{
+  font-size: 1.2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 95vh;
+}
+
+.frame {
+  
+  background-image: url(/images/frame.png);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: 65rem;
+  border-radius: 20px;
+}
+
+.right-div{
+  width: 34rem; /*26 anteriormente e iba bien*/
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-content: space-around;
+}
+
+span{
+  font-weight: 700;
+}
+
+.logIn-icon{
+  background-color: #1c5380;
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  border: 1px solid #000000;
+  border-radius: 7%;
+}
+
+.icon-section{
+  width: 38rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.phones{
+  width: 28rem;
+  margin-left: 2rem;
+
+}
+
+.instagramIcon{
+  display: inline;
+  flex-direction: row;
+}
+
+.icons{
+  margin-top: 6rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: space-between ;
+}
+
+.main-section{ /*padding: 0 10rem*/
+  margin-left: 12rem;
+ display: flex;
+ flex-direction: column;
+ justify-content: flex-start;
+ align-items: flex-end;
+}
+
+.footer-section{
+  color: #1c5380 ;
+  font-size: 1.3rem;
+  margin-left: 10rem;
+  padding-bottom: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: space-between;
+}
+
+.footer-section a{
+  color: #1c5380;
+  margin-right: 1rem;
+  text-decoration: none;
+}
