--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,92 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+    background-repeat: no-repeat;
+    border: 0;
+}
+
+header {
+    height: 300px;
+    background: linear-gradient(0deg, #06365f 0%, #1a4c75 30%, #1c5380 80%, #3f83ba 100%);
+}
+
+.btn-icon {
+    width: 20px;
+}
+
+.page-content {
+    position: relative;
+    top: 125px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.general-content {
+    max-width: 600px;
+    min-width: 450px;
+}
+
+.description-content {
+    background-color: #FFF;
+    border-radius: 5px;
+    padding: 20px;
+    border: none;
+    border-width: 1px;
+    border-style: solid;
+    border-image: linear-gradient( to bottom, #000, rgba(0, 0, 0, 0)) 0 100%;
+    /*box-shadow: 10px -10px 10px #000;*/
+}
+
+.frame-class {
+    width: 100%;
+    height: 150px;
+}
+
+.blue-title {
+    font-size: 30px;
+    color: #06365f;
+    max-width: 300px;
+    font-weight: bolder;
+}
+
+.bg-l-blue {
+    background: linear-gradient(0deg, #1c5380 0%, #3f83ba 100%);
+    border-radius: 5px;
+    border: 1px solid #000;
+    padding: 10px 20px;
+    position: relative;
+    bottom: 25px;
+    left: 30%;
+    color: #FFF;
+}
+
+.app-logos img {
+    padding: 15px;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+ul {
+    display: flex;
+    justify-content: center;
+}
+
+li {
+    padding: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: #3f83ba;
+    font-weight: bold;
+}
+
+.instagram-copy {
+    color: #D3D3D3;
 }
