--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,180 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+header{
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  height: 300px;
+  padding-top: 100px;
+}
+
+.main-container{
+   margin: 0 auto;
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   
+}
+
+.img-movile{
+  background-image: url("../images/phones.png");
+  width: 350px;
+  height: 500px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  
+}
+
+.cont-vert{
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+}
+
+.cont-hor{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 25px;
+  align-items: center;
+}
+
+.btn-home{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color:#1c5380;
+  padding: 0 15px;
+  width: 100px;
+  height:50px;
+  border: 1px solid rgba(250,250,250,0);
+  border-radius: 5px 5px;
+  box-shadow: inset 0px 15px 15px -15px rgba(250,250,250,.4);
+  color: white;
+  font-weight: bold;
+  padding: 0 5px;
+}
+
+.btn-home:hover{
+ box-shadow: inset 0px 15px 15px -15px rgba(33,33,33,.4);
+}
+
+
+.cont-footer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 25px;
+}
+
+.logo-ig{
+  width: 300px;
+}
+
+.contenido{
+  background-image: url('../images/frame.png');  
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 40px;
+}
+
+h1{
+  color: #06365f;
+  font-weight: bold;
+  margin: 0;
+}
+
+footer{
+  width: fit-content;
+  margin: 0 auto;
+}
+
+footer ul{
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  justify-content: space-around;
+  text-decoration: none;
+}
+
+footer ul li{
+  font-size: 10px;
+  color: grey;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin: 0 15px;
+}
+
+a:link{
+  text-decoration: none;
+  color: #06365f;
+}
+
+a:visited{
+  text-decoration: none;
+  color: #06365f;
+}
+
+@media (max-width:800px){
+ .img-movile{
+    display: none;
+  }
+
+}
+
+@media (max-width:600px){
+
+  footer ul{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin: 0 auto;
+  padding-inline-start: 0;
+  }
+
+  .btn-home{
+    margin: 0 10px;
+  }
+  
+}
+
+@media (max-width: 400px){
+
+  .main-container{
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .cont-vert{
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 360px;
+    margin: 0 auto;
+  }
+
+  .cont-hor{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+
+  .cont-footer{
+    flex-direction: column;
+    align-items: center;    
+  }
+
+  header{
+    width: max-content;
+    padding-top: 50px;
+  }
+
+  .img-btn-store{
+    width:150px;
+  }
+}
