--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,112 @@
+Colors to use
 /*
-Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: white;
   margin: 0;
+  }
+
+header{
+  width: 100%;
+  height: 50%;
+  background-color: #1c5380; 
+  background-color: linear-gradient(360deg, rgba(2,0,36,1) 0%, rgba(28,83,128,1) 21%, rgba(6,54,95,1) 100%);
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+
+.background {
+  display: flex;
+  position: relative; 
+  justify-content: center;
+  padding: 150px 300px 70px 300px;
+  min-width: 50%;
+  align-items: stretch;
+  height: 600px;
+  
+  
+}
+
+.background > img {
+  height: 600px;
+  position : relative;
+  min-width: 40%; 
+ }
+
+.instadiv {  
+  position: relative;
+  margin-left: 100px;
+  min-width: 40%;
+  }
+
+
+
+  h1 {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+  }
+
+.button {
+  background-image: url("../images/home.png");
+  background-repeat: no-repeat;
+  background-position: 15% 50%;  
+  background-color: #1c5380;
+  background-color: linear-gradient(360deg, rgba(2,0,36,1) 0%, rgba(28,83,128,1) 21%, rgba(6,54,95,1) 100%);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  width: 100px;
+  height: 40px;
+  border-radius:10.5% ;
+  color: whitesmoke;
+  font-size: 45%;
+  font-weight: 700;
+  text-align: right;
+  padding: 12px;
+  margin-top: 15px;
+}
+
+.text-box {
+  background-color: white;
+  padding: 10px; 
+  border-radius:1.5% ;
+  line-height: 190%;
+  font-size: 120%;  
+}
+
+.text-box > h2 {
+  color: #06365f ;
+  line-height: 120%;
+}
+.appstore {
+  display: flex; 
+}
+
+#separa {
+    margin-right: 20px;
+  }
+
+.ended {  
+  text-transform: uppercase;
+  display: inline-flex;
+  position: relative;
+  align-items: flex-end;
+  justify-content: center;
+  margin-bottom: 80px;
+  color: #1c5380;
+  font-weight: 600;
+  word-spacing: 7pt;
+}
+.ended > span {
+  color:gray;
+  word-spacing: 1pt;
+  margin-left: 20px;
+
+}
+
+
+
