--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,117 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+body, html {
+  margin: 0;
+  padding: 0;
+}
+
+div {
+  border-radius: 4px;
+}
+
+.header-div {
+  background-color: #1c5380;
+}
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif
+}
+
+strong {
+  font-weight: bold;
+}
+
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 150px;
+  background: #1c5380;
+  background: linear-gradient(0deg, white 55%, #1c5380 45%) no-repeat;
+}
+
+.main-div {
+  /* box-shadow:0px 1px 1px 1px #c3c7ca;*/
+}
+
+.phone-img {
+  padding: 0 70px 0 0;
+}
+
+.top-banner {
+  background-color: #1c5380;
+  width: 30%;
+  padding-top: 15px;
+  width: 500px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.content-box {
+  padding-left: 7%;
+  background-color: #fefeff;
+  box-shadow: 0px 1px 1px 1px #c3c7ca;
+}
+
+.bottom-app {
+  padding: 0 15px 0 0;
+}
+
+.button {
+  display: flex;
+  background-color: #1c5380;
+  color: #ecf1f1;
+  font-size: 20px;
+  padding: 0 0 0 0;
+  width: 100px;
+  text-decoration: none;
+  box-shadow: 3px 3px 3px #06365f;
+  text-shadow: 0 1px 1px #080808;
+  border-radius: 3px;
+  margin: 17px 5px 25px 20px;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.button:hover {
+  box-shadow: 0px 0px 0px;
+  padding-top: 8px;
+}
+
+.Icon-Butt {}
+
+.Text-butt {}
+
+.footer-nav {
+  line-height: 14px;
+  margin: -2px 0 -3px;
+  font: inherit;
+}
+
+h2 {
+  color: #06365f;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: no-wrap;
+  justify-content: center;
+  width: 700px;
+  padding: 5% 35% 0 35%;
+  justify-content: space-between;
+  color: #6e706c;
+}
+
+.footer-nav a {
+  text-decoration: none;
+}
+
+li {
+  list-style-type: none;
+  padding: 0 10px 0 10px;
+  font-size: 10px;
+  text-decoration: none;
 }
