--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,67 @@
+body {
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+}
+
+.Page {
+  display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: space-around;
+	padding: 30px 160px 30px 160px;
+}
+
+.All {
+  display: flex;
+	justify-content: space-around;
+	align-content: center;
+	align-items: flex-start;
+	padding: 40px 30px;
+}
+
+.content-general {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 5px 30px;
+}
+
+.Insta{
+  display: flex;
+	justify-content: space-around;
+	align-content: stretch;
+	padding-bottom: 20px;
+}
+
+.h2 {
+  color: lightblue;
+}
+
+
+footer {
+  margin-top: 80px;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+footer ul {
+  margin-left: 100px;
+  margin-right: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding-left: 0px;
+  font-size: 14px;
+  list-style-type: none;
+  font-weight: 700;
+  color: gray;
+  flex-wrap: wrap;
+}
+
+
 /*
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-}
