--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,8 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+
+
 * {
   margin: 0;
   padding: 0;
@@ -18,6 +20,17 @@ body {
 
 }
 
+.flex-column{
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-row-AlignC-spaceB{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .container {
   width: 100vw;
   height: 100vh;
@@ -31,19 +44,13 @@ body {
 
   margin: 0 auto 0;
   padding: 10rem 0 10rem;
-
+/* 
   display: flex;
-  flex-direction: column;
+  flex-direction: column; */
 }
 
 main {
   flex:20;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: start;
-
   height: 70vh;
 }
 
@@ -64,18 +71,11 @@ main {
   height: 70vh;
   padding-top: 5rem;
   padding-bottom: 5rem;
-
-  display: flex;
-  flex-direction: column;
-
-
 }
 
 .section-logo {
   flex:1;
 
-  display: flex;
-  justify-content: space-between;
   align-items: flex-start;
   padding-bottom: 2rem;
   width: 100%;
@@ -96,10 +96,7 @@ main {
   background: linear-gradient(rgb(67, 129, 180)30%,rgba(28, 83, 128, 1)60%);
   box-shadow: 0 1px 10px #06365f;
 
-  display: flex;
   justify-content: center;
-  align-items: center;
-
 }
 
 .logIn-icon {
@@ -118,8 +115,6 @@ main {
               -10rem -10rem 1rem -10rem grey;
   border-radius: 5px;
 
-  display: flex;
-  flex-direction: column;
   justify-content: center;
 }
 
@@ -128,7 +123,6 @@ main {
 }
 .section-content p{
   flex:1;
-  /* padding-bottom: 2rem; */
 }
 
 
@@ -143,9 +137,8 @@ main {
   justify-self: flex-end;
 
   list-style: none;
-  display: flex;
-  justify-content: space-evenly;
-  padding:2rem 10rem 0rem 10rem
+
+  padding:2rem 15rem 0rem 15rem
 }
 
 .footer-list a{
