--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,39 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
 }
+
+.background-blue-box {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 40%;
+  z-index: -1;
+}
+
+.father-container {
+  margin: 10%;
+}
+
+.all-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.phones {
+  margin: 0 5%;
+}
+.info-container {
+  margin: 0 5%;
+}
+
+
+
