--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,40 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0 auto;
+  width: 80%;
+}
+
+#background{
+  background-image: url(../images/bgtile.png);
+  height: 250px;
+  padding: 90px 40px;
+}
+
+.main{
+  display: flex;
+}
+
+#log-in{
+  background-color: #1c5380;
+}
+
+.text{
+  background-color: white;
+}
+
+#stores{
+  display: flex;
+  justify-content: space-between ;
+}
+
+footer{
+  background-color: white;
+  display: flex;
 }
