--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,132 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
+
+
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
+}
+
+h2{
+  color: #06365f;
+}
+
+
+#container-1{
+  background: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 100px 100px 50px 100px;
+}
+
+section{
+ width: 504px;
+ padding: 10px 50px;
+
+ display: flex;
+ flex-direction: column;
+
+}
+
+article {
+  background: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding: 20px 40px;
+}
+
+header{
+  display: flex;
+  flex-direction: row;
+  justify-content:  space-between;
+  align-items: center;
+
+  padding: 5px;
+}
+
+#log-in-bottom{
+  background-color:#1c5380;
+  border: 1px solid #06365f;
+  color: white;
+
+  padding: 4px 15px;
+  border-radius: 3px;
+
+  display: flex; 
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 16px; 
+}
+
+#log-in-bottom img {
+  padding: 5px 5px;
+}
+
+
+ 
+#container-2{
+  display: flex;
+  flex-direction: row;
+  padding: 0px 40px;
+  
+} 
+
+#container-2 button{
+  margin: 0;
+  padding: 0;
+  border: none;
+} 
+
+#container-2 img{
+ padding: 0px 10px;
+} 
+footer{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+footer ul{
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  color:#1c5380;
+}
+
+footer li{
+  padding: 5px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+#copyrigth{
+  color: grey;
+  padding: 5px 20px;
+}
+
+@media (max-width: 600px){
+  #phones-img{
+    display: none;
+  }
+
+  #house-logo{
+    display: none;
+  }
+  footer{
+    display: flex;
+    flex-direction: column;
+    
+  }
 }
