organization of the lab

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,100 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+* {
+  box-sizing: border-box;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.container {
+  border: 1px solid transparent;
+  height: 600px;
+  width: 1100px;
+  display: flex;
+  margin: 110px 110px 5px 110px;
+}
+
+.image-logo {
+  margin: 0px 0px;
+  border: 1px solid transparent;
+}
+
+.text{
+  position: absolute;
+  display: flex;
+ 
+}
+
+#cabecera {
+  display: flex;
+  width: 500px;
+  flex-direction: row;
+  align-content:flex-end;
+  margin: 0px 450px;
+  border:1px solid transparent;
+ 
+}
+
+.button{
+  width: 75px;
+  height: 34px;
+  margin-top: 25px;
+  margin-left: 100px;
+  color: white;
+  background-color:#1c5380;
+  background: linear-gradient(to bottom, #1c5380, white);
+  border-radius: 6px;
+  opacity: 0.6;
+}
+#button .log-in{
+  width: 30px;
+  height: 24px;
+  
+}
+
+.content{
+  position: absolute;
+  display: flex;
+  margin: 80px 450px;
+  flex-direction: column;
+  width: 500px;
+  height: 100px;
+  background-image: url("../images/frame.png");
+  border: 1px solid transparent;
+
+
+}
+
+h2{
+  color: #06365f;
+  width: 250px;
+  margin: 20px 10px 10px 35px;
+}
+
+p{
+  width: 440px;
+  margin: 30px 35px 0px; 
+}
+
+#botones{
+  margin-top: 470px;
+  margin-left: 230px;
+  border:1px solid transparent;
+  background-color: white;
+}
+
+#footer{
+  width: 1100px;
+  margin:0px 50px 0px 50px;
+  display: flex;
+  font-size: 13px;
+  justify-content: center;
+  border:1px solid transparent;
+  color: #1c5380;
+  font-weight: bold;
 }
