--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,87 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#container{
+  background: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  display: flex;
+  justify-content: center;
+  border: 5px solid red;
+}
+
+.mobiles{
+ border: 5px solid green;
+ padding-top: 95px;
+ padding-right: 30px;
+ padding-left: 20px;
+}
+
+.instagram-image {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 30px;
+  border: 5px solid orange;
+}
+
+.instagram-text {
+ border: 5px solid black;
+ padding-top: 95px;
+}
+
+
+
+.button {
+  background-color:#1c5380;
+  color: white;
+  height:50px;
+  width: 100px;
+  border: 2px solid yellow;
+  
+}
+.capture {
+  background-color: white;
+  border-top:20px #06365f ;
+  border:2px solid grey;
+  padding-right: 150px;
+  padding-left: 50px;
+  
+}
+h2 {
+  color:#06365f;
+  
+  border: 2px solid pink;
+}
+
+.take-a-picture {
+  border: 2px solid greenyellow;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+.stores{
+  display:flex;
+  justify-content: space-around;
+  padding-right: 250px;
+  padding-left: 45px;
+  padding-bottom: 10px;
+  padding-top: 2px;
+  border: 2px solid violet;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding-left: 200px;
+  padding-right: 200px;
+  font-size: 10px;
+  border: 2px solid black;
+}
+li {
+  color:#1c5380;
+  font-weight: bold;
+}
+
+.copy {
+  color: grey;
+}
