--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,127 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+*{
+  box-sizing: border-box;
+  list-style-type: none;
+  text-decoration: none;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+}
+
+.content-blue{
+  height: 400px; 
+  background-image: url("../images/bgtile.png");
+}
+/*MAIN CONTENT*/
+.main-content{
+  position: absolute;
+  top:20%;
+  left: 20%;
+  display: flex;
+  justify-content: center;
+  height: 600px;
+  padding: 30px;
+}
+
+/*CONTENT LEFT*/
+.content-left img{
+  height: 550px;
+}
+
+/*CONTENT RIGHT*/
+
+.content-right{
+  height: 600px;
+  width: 700px;
+  margin-left: 10%;
+  display: flex;
+  justify-content: space-between;
+  align-items:center;
+  flex-wrap: wrap;
+}
+
+.content-right-up{
+   display: flex;
+   align-items:center;
+}
+
+#login-btn{
+  width:120px;
+  height: 50px;
+  background-color:#2c6196;
+  color:white;
+  font-weight: bold;
+  font-size: 1.1rem;
+  border: 2px solid #1c5380;
+  margin-left: 60px;
+  padding-left:10px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  border-radius:5px;
+}
+#title-btn{
+  margin:8px;
+  padding-top:2px ;
+}
+
+.content-rigth-down{
+  height: 500px;
+  width: 500px;
+  background-image: url("../images/frame.png");
+  background-repeat: repeat-x;
+}
+
+.content-rigth-down >h2{
+  color: #06365f;
+  padding-top: 20px;
+  padding-left: 10px ;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+article{
+  padding: 10px;
+  margin: 20px;
+}
+
+#bold{
+  font-weight: bold;
+}
+
+.badge-phone{
+ display: flex;
+ justify-content: space-evenly;
+}
+
+footer{
+  display: flex;
+  position: absolute;
+  top: 90%;
+  left: 27%;
+  padding: 14px;
+}
+
+footer ul{
+  width: 800px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+  
+}
+
+footer a{
+  font-size: 15px;
+  color:#1c5380;
+  font-weight: bold;
+}
+
+#title-insta{
+  color: rgb(0,0,0,0.5);
+  font-weight: 500;
+  background-color: transparent;
 }
