--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,37 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  max-width: 70%;
+  max-height: 70%;
+  margin: 150px auto;
+}
+
+.container-main {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  max-width: 70%;;
+}
+
+.main-text {
+  background-image: url("../images/frame.png");
+  background-position: initial;
+  background-repeat: no-repeat; 
+  background-size: contain;
+  padding: 2rem;
 }
